--- a/views/actors.jade
+++ b/views/actors.jade
@@ -6,12 +6,27 @@ block content
       form(role='form')
         .form-group.form-inline
           label(for='actor_first_name') Actor's First Name
-          input#actor_first_name.form-control(type='text')
+          input#actor_first_name.form-control(type='text', value=(data ? data.first_name : ""))
           label(for='actor_last_name') Actor's Last Name
-          input#actor_last_name.form-control(type='text')
-        .form-group.form-inline
-          label(for='actor_gender') Gender
-          select#movie_year.form-control
-            option Male
-            option Female
+          input#actor_last_name.form-control(type='text', value=(data ? data.last_name : ""))
         button.btn.btn-default.pull-right(type='submit') Submit
+  if showResults
+    .col-md-6
+      .panel.panel-primary
+        .panel-heading Results
+        .panel-body.target
+          table(class='table table-hover')
+            th Title
+            th Year
+            th Rank
+            tbody
+              each movie, index in data.movies
+                tr
+                  td
+                    a(href='/Movies/#{movie.id}')= movie.name
+                  td
+                    = movie.year
+                  td
+                    = movie.rank
+    .col-md-6
+      !=template
