--- a/views/movies.jade
+++ b/views/movies.jade
@@ -8,17 +8,34 @@ block content
           label(for='movie_name') Movie Name
           input#movie_name.form-control(type='text', name='name')
         .form-group.form-inline
-          label(for='actor_first_name') Actor's First Name
-          input#actor_first_name.form-control(type='text')
-          label(for='actor_last_name') Actor's Last Name
-          input#actor_last_name.form-control(type='text')
-        .form-group.form-inline
           label(for='movie_year') Movie Year
-          select#movie_year.form-control
-            option 1
-            option 2
-          label(for='movie_genre') Movie Genre
-          select#movie_genre.form-control
-            option 1
-            option 2
+          select#movie_year.form-control(name='year')
+            option
+            - var i = 1888
+            -while (i <= 2008)
+                option 
+                  =i++
         button.btn.btn-default.pull-right(type='submit') Submit
+  if showResults
+    .col-md-6
+      .panel.panel-primary
+        .panel-heading Results
+        .panel-body.target
+          table(class='table table-hover')
+            th Title
+            th Year
+            th Genre
+            th Rank
+            tbody
+              each movie, index in data
+                tr(class=(movie.id === id ? "info": ""))
+                  td
+                    a(href='/Movies/#{movie.id}')= movie.name
+                  td
+                    = movie.year
+                  td 
+                    = movie.movies_genres ? movie.movies_genre.genre : ""
+                  td
+                    = movie.rank
+    .col-md-6
+      !=template
