--- a/views/layout.jade
+++ b/views/layout.jade
@@ -13,16 +13,16 @@ html
           a(href='/Actors') Actors
         li.dropdown
           a.dropdown-toggle(href='#', data-toggle='dropdown', preventDefault='true')
-            | Dropdown 
+            | Favorites 
             b.caret
           ul.dropdown-menu
             li
               if favs
                 each fav in favs
-                  a(href='#')
+                  a(href='/Movies/#{fav.type_id}')
                     = fav.name
     .container
       block content
-    script(type='text/javascript', src='jquery/dist/jquery.js')
+    script(type='text/javascript', src='/jquery/dist/jquery.js')
     script(type='text/javascript', src='/bootstrap/dist/js/bootstrap.min.js')
       
