--- a/views/movies.jade
+++ b/views/movies.jade
@@ -17,7 +17,8 @@ block content
                 option 
                   =i++
         button.btn.btn-default.pull-right(type='submit') Submit
-      if data && data.id
+      - var movieInFavs = favs.map(i=>i.type_id).indexOf(data.id) > -1;
+      if data && data.id && !movieInFavs
         a.btn.btn-default.pull-right(href='/Movies/#{data.id}?method=post') Add to Favorites
   if showResults
     .col-md-6
